--- a/Hospital/Views/Doctor/Delete.cshtml
+++ b/Hospital/Views/Doctor/Delete.cshtml
@@ -43,10 +43,10 @@
             @Html.DisplayFor(model => model.Salary)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName + model.LastName)
+            Full Name
         </dt>
         <dd class = "col-sm-10">
-            Full Name
+            @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Age)
