--- a/Hospital/Views/Doctor/Edit.cshtml
+++ b/Hospital/Views/Doctor/Edit.cshtml
@@ -57,6 +57,11 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="UserName" class="control-label"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
