--- a/Hospital/Views/Admin/Login.cshtml
+++ b/Hospital/Views/Admin/Login.cshtml
@@ -1,25 +1,15 @@
 ﻿@using Hospital.ViewModels
 @model LoginViewModel
-
 @{
-	//ViewData["Title"] = "Login";
-	ViewData["Title"] = $"Login as {ViewBag.Role}";
-	Layout = "~/Views/Shared/_AuthLayout.cshtml";
+    ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
-
-
 
 <div class="main-agileinfo">
 	<div class="agileits-top">
 		<div asp-validation-summary="All" style="color:red" class="text-danger"></div>
-		@*display all arrors if register doesn't succeed*@
 
-
-		<form asp-action="Login" asp-controller="Account" method="post">
-
-			@* <input type="hidden" name="role" value="@ViewBag.Role" /> *@
-			<input type="hidden" name="role" value="@TempData["Role"]" />
-
+		<form asp-action="Login" asp-controller="Admin" method="Post">
 			<input type="email" asp-for="Email" placeholder="Email" required="">
 			<span asp-validation-for="Email" style="color:red"></span>
 			<br />
@@ -31,7 +21,7 @@
 			<br />
 
 
-			@* <div class="wthree-text">
+@* 			<div class="wthree-text">
 				<label class="anim">
 					<input asp-for="RememberMe" class="checkbox">
 					<span>Remember Me</span>
@@ -40,25 +30,10 @@
 			</div> *@
 
 
-
 			<input type="submit" value="LOGIN">
 		</form>
-
-		@* <p>Don't have an Account? <a asp-action="Register"> Register Now</a></p>
-		<br />
-		<p><a asp-action="ForgetPassword">Forget Password?</a></p> *@
-
-		@if (ViewBag.Role == "Patient")
-		{
-			<p>Don't have an Account? <a asp-action="Register"> Register Now</a></p>
-			<br />
-			
-		}
-		<p><a asp-action="ForgetPassword">Forget Password?</a></p>
-
 	</div>
 </div>
-
 @section ValidationScriptSection
 {
 	<partial name="_ValidationScriptsPartial" />
