--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -27,9 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
-
-                        <li class="nav-item">
+@* 
+                        @if (ViewBag.Role == "Admin")
+                        {
+                             <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Patient" asp-action="Index">Patients</a>
                         </li>
 
@@ -40,16 +41,36 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admins</a>
                         </li>
+                        } *@
 
-                        <li class="nav-item ">
+
+                        @using Microsoft.AspNetCore.Identity
+                        @inject SignInManager<Person> SignInManager
+                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Patient" asp-action="Index">Patients</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admins</a>
+                            </li>
+                        }
+                       
+
+                     @*    <li class="nav-item ">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                        </li>
+                        </li> *@
 
-                        <li class="nav-item ml-auto">
+                        <li class="nav-item ms-auto">
                             <a class="nav-link text-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                         </li>
 
